--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -17,7 +17,7 @@ In summary, this intricate scoring framework is carefully crafted to reward prog
     </div>
 
     <div class="faq-item">
-      <h3>That description is too complicated. Can you explain it to me as if I am an orange nincompoop </h3>
+      <h3>That description is too complicated. Can you explain it to me as if I am an orange nincompoop? </h3>
       <p>The scoring system in this competition is absolutely tremendous, folks. It's a beautiful, beautiful system that I've put together. Let me tell you, it's the best scoring system you've ever seen, believe me.
 <br><br>
 So, here's how it works. Teams start off in these group stages, right? And let me tell you, if you make it out of those groups, you get a fantastic point. It's a big point, a very big point. Sets you up for the next round.
