--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -1,5 +1,3 @@
-// leaderboard_show.scss
-
 /* Leaderboard container styling */
 .leaderboard-show-container {
   max-width: 800px;
@@ -72,4 +70,18 @@ tbody tr:nth-child(even) {
   width: 32px;
   height: 32px;
   vertical-align: middle;
+}
+
+/* Animation for spinning numbers */
+.spin {
+  animation: spin 1s cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
