--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -25,7 +25,7 @@
               <% elsif match.winner == "away" %>
                 <%= match.away_team.name %>
               <% else %>
-                TBC
+                Draw
               <% end %>
             <% end %>
           </div>
