--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Matches</h1>
 <% if @error_message %>
   <p><%= @error_message %></p>
 <% else %>
@@ -18,7 +17,7 @@
           </div>
           <div class="winner">
             <% if match.status != 'MidEvent' %>
-              <strong>Winner:</strong>
+              Winner:
               <% if match.status == 'PreEvent' %>
                 TBC
               <% elsif match.winner == "draw" %>
@@ -49,7 +48,6 @@
         <div class="match-details">
           <p><strong>Stage:</strong> <%= match.stage %></p>
           <p><strong>Fixture Date:</strong> <%= match.start_time.strftime("%B %d, %Y %H:%M") %></p>
-          <p><strong>Status:</strong> <%= match.status %></p>
         </div>
       </div>
     <% end %>
