refresh button move

--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -104,6 +104,7 @@ h1 {
   color: white; /* White text */
   border: none;
   border-radius: 5px;
+  margin-left: 25px;
   cursor: pointer;
   transition: background 0.3s;
   font-size: 12px; /* Adjust font size for readability */
