leaderboard show update

--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -55,7 +55,7 @@ tbody tr:nth-child(even) {
 .friend-info {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 /* Styling for the flags */
