--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,8 +3,8 @@
     <h1>European Championships 2024</h1>
   </div>
   <div class="nav-buttons">
-    <a href="<%= leaderboard_path(:show) %>" class="button">Go to Leaderboard</a>
-    <a href="<%= matches_path %>" class="button">Go to Matches</a>
-    <a href="<%= leaderboard_index_path %>" class="button">Go to Groups</a>
+    <a href="<%= leaderboard_path(:show) %>" class="button">Leaderboard</a>
+    <a href="<%= matches_path %>" class="button">Matches</a>
+    <a href="<%= leaderboard_index_path %>" class="button">Groups</a>
   </div>
 </nav>
