--- a/app/assets/stylesheets/pages/_leaderboard_show.scss
+++ b/app/assets/stylesheets/pages/_leaderboard_show.scss
@@ -38,9 +38,9 @@
 }
 
 // Styling for the profile picture
-.profile-picture {
-  width: 50px;
-  height: 50px;
+.profile-picture-group {
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
   margin-top: 10px;
 }
