--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -7,7 +7,7 @@
           <p><%= group.name %></p>
           <h1> <%= group.friend&.name || "No Friend Assigned" %></h1>
           <% if group.friend&.profile_picture_url.present? %>
-            <%= image_tag(group.friend.profile_picture_url, alt: group.friend.name, class: 'profile-picture') %>
+            <%= image_tag(group.friend.profile_picture_url, alt: group.friend.name, class: 'profile-picture-group') %>
           <% end %>
           <h2>Multiplier: <%= group.multiplier.to_i %></h2>
         </div>
