colour scheme change

--- a/app/assets/stylesheets/pages/_leaderboard.scss
+++ b/app/assets/stylesheets/pages/_leaderboard.scss
@@ -17,13 +17,13 @@ table {
 /* Styling for table headers */
 th {
   padding: 10px;
-  background-color: #e43d121a;
+  background-color: #90AEAD;
   text-align: left;
 }
 
 /* Styling for table rows */
 tbody tr {
-  background-color: #e43d122b;
+  background-color: #90aeadbd;
   text-align: center;
 }
 
@@ -35,7 +35,7 @@ td {
 
 /* Styling for alternating table rows */
 tbody tr:nth-child(even) {
-  background-color: #e43c1267;
+  background-color: #874f414e;
 }
 
 /* Styling for the profile pictures */
