--- a/app/assets/stylesheets/pages/_matches.scss
+++ b/app/assets/stylesheets/pages/_matches.scss
@@ -40,7 +40,7 @@
 }
 
 .winner {
-  color: rgb(255, 97, 97);
+  color: #874F41;
   font-size: 35px;
   padding: 5px;
   border: 2px solid $primary-color;
