--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -4,12 +4,12 @@
     <% @groups.each do |group| %>
       <div class="leaderboard-card group-card">
         <div class="leaderboard-header">
-          <p><%= group.name %></p>
-          <h1> <%= group.friend&.name || "No Friend Assigned" %></h1>
+          <h4><%= group.name %></h4>
+          <h1><strong> <%= group.friend&.name || "No Friend Assigned" %></strong></h1>
           <% if group.friend&.profile_picture_url.present? %>
             <%= image_tag(group.friend.profile_picture_url, alt: group.friend.name, class: 'profile-picture-group') %>
           <% end %>
-          <h2>Multiplier: <%= group.multiplier.to_i %></h2>
+          <h4>Multiplier: X<%= group.multiplier.to_i %></h4>
         </div>
         <div class="team-list">
           <div class="progressed">
